@@ -59,6 +59,8 @@ let dot_leaders_enabled                  = true
 let indent_lines_solid_color             = `NAME "#d0d0d0" (*"#e3e3e3"*)
 let indent_lines_dashed_color            = `NAME "#a0a0a0" (*"#c9c9c9"*)
 let matching_delim_border_color          = `NAME "#ff0000"
+let mark_occurrences_bgcolor             = "#90ff90"
+let mark_occurrences_color               = `NAME "#60df60"
 let right_margin_line_color              = `NAME "#e0e0e0"
 let error_popup_bg_color                 = `NAME "#ffeef2"
 let error_popup_border_color             = `NAME "#ff6a99"
@@ -66,7 +68,7 @@ let error_underline_color                = `NAME "#ff0000"
 let warning_popup_bg_color               = `NAME "#fff4e8"
 let warning_popup_border_color           = `NAME "#ffc56a"
 let warning_underline_color              = warning_popup_border_color
-let warning_unused_color                 = "#c0c0c0"
+let warning_unused_color                 = "#a0a0a0"
 let warning_unused_properties            = [`FOREGROUND warning_unused_color; `STYLE `ITALIC]
 let warning_tootip_enabled               = false
 (* Gutter colors:
@@ -84,9 +86,9 @@ let code_folding_hightlight_gradient     = ["#f4f4f4"; "#f9f9f9"; "#fefefe"] (* 
 let horizontal_line_color                = `NAME "#000000" (* Line drawn by clicking on the gutter. *)
 let code_folding_font                    = ref (Some "-*-*-medium-r-*-sans-10-*-*-*-*-*-*-*")
                                           (* Font for the "n lines" label in the fold line; it must be 10 pixels height. None for no label *)
-let global_gutter_comments_enabled       = true
-let global_gutter_comments_color         = `NAME "#00db00"
-let global_gutter_comments_bgcolor       = `NAME "#d2edd2"
+let global_gutter_comments_enabled       = false
+let global_gutter_comments_color         = `NAME "#fa80a5"
+let global_gutter_comments_bgcolor       = `NAME "#fad0f5"
 let global_gutter_no_errors              = `NAME "#daedd0"
 let find_references_title_bgcolor        = "#000000"
 let find_references_title_fgcolor        = "#ffffff"
